# flake8-prettycount

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  flake8_perfile.py  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
flake8_prettycount/: __init__.py  __main__.py  application.py
