[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "flake8-prettycount"
version = "0.1.1"
description = "Wrapper around flake8 providing a formatted count at the end."
readme = "README.rst"
keywords = [ "flake8",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/flake8-prettycount"
"Issue Tracker" = "https://github.com/domdfcoding/flake8-prettycount/issues"
"Source Code" = "https://github.com/domdfcoding/flake8-prettycount"

[project.scripts]
flake8-prettycount = "flake8_prettycount.__main__:main"
flake8_prettycount = "flake8_prettycount.__main__:main"

[tool.importcheck]
always = [ "flake8_prettycount", "flake8_prettycount.__main__", "flake8_prettycount.application",]

[tool.whey]
base-classifiers = [
    "Environment :: Console",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "flake8_prettycount"
