[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "flake8-prettycount"
version = "0.1.2"
description = "Wrapper around flake8 providing a formatted count at the end."
readme = "README.rst"
keywords = [ "flake8",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/python-formate/flake8-prettycount"
"Issue Tracker" = "https://github.com/python-formate/flake8-prettycount/issues"
"Source Code" = "https://github.com/python-formate/flake8-prettycount"

[project.scripts]
flake8-prettycount = "flake8_prettycount.__main__:main"
flake8_prettycount = "flake8_prettycount.__main__:main"

[tool.importcheck]
always = [ "flake8_prettycount", "flake8_prettycount.__main__", "flake8_prettycount.application",]

[tool.whey]
base-classifiers = [
    "Environment :: Console",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
python-versions = [ "3.7", "3.8", "3.9", "3.10", "3.11", "3.12", "3.13",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "flake8_prettycount"

[tool.mypy]
python_version = "3.9"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.dependency-dash."requirements.txt"]
order = 10
