# This file is managed by 'repo_helper'.
# You may add new sections, but any changes made to the following sections will be lost:
#     * metadata
#     * options
#     * options.packages.find
#     * mypy
#     * options.entry_points

[mypy]
python_version = 3.6
namespace_packages = True
check_untyped_defs = True
warn_unused_ignores = True

[options.entry_points]
console_scripts =
    flake8-prettycount = flake8_prettycount.__main__:main
    flake8_prettycount = flake8_prettycount.__main__:main
