# This file is managed by 'repo_helper'.
# You may add new sections, but any changes made to the following sections will be lost:
#     * metadata
#     * options
#     * options.packages.find
#     * mypy
#     * options.entry_points

[options.entry_points]
console_scripts =
    flake8-prettycount = flake8_prettycount.__main__:main
    flake8_prettycount = flake8_prettycount.__main__:main
